added code to populate official photos from sunlight

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -64,7 +64,7 @@
 	<td>
 	  <% if !congressperson.nil? %>
 	    <% if congressperson.has_photo? %>
-	      <%= image_tag congresspeson.photo_path %>
+	      <%= image_tag congressperson.photo_path %>
 	    <% else %>
 	      No photo.
 	    <% end %>
