--- a/app/views/admin/officials/_form.html.erb
+++ b/app/views/admin/officials/_form.html.erb
@@ -2,8 +2,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :email %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
     <%= f.input :state_id, :as => :hidden, :input_html => { :value => params[:state_id] }%>
   </div>
 
