--- a/app/views/quick_poll_responses/index.html.erb
+++ b/app/views/quick_poll_responses/index.html.erb
@@ -1,7 +1,44 @@
 <script type="text/javascript">
 $(function () {
+    function getGraphData(json) {
+      var data = [];
+      results = json['results'];
+
+      sum=0.0
+      for (residx in results) {
+         res = results[ residx ];
+         console.log( "res=" + res );
+         sum=sum + res['value'];
+      }
+      console.log( "sum=" + sum );
+
+      for (residx in results) {
+         res = results[ residx ];
+         percent=Math.round((res['value'] / sum)*100.0*100)/100;
+         console.log( res['name'] + "=" + percent );
+         data.push( { name: res['name'], y: percent } );
+      }
+      return data;
+    }
+
+
     var chart;
     $(document).ready(function() {
+
+      graphTitle = "<%= @quick_poll.title %>";
+      json = {"poll":{"body":"Should $3.7 gazillion dollars be spent on a bridge to Canada?","created_at":"2013-02-07T03:35:54Z","end_time":"2013-01-01T05:00:00Z","id":1,"issue_id":1,"poll_workflow_state_id":2,"quick_poll_type_id":1,"start_time":"2012-01-01T05:00:00Z","title":"Should the bridge to Canada be built?","updated_at":"2013-02-07T03:35:54Z"},"results":[{"name":"Agree Strongly","value":1,"count":231},{"name":"Agree Somewhat","value":2,"count":342},{"name":"Neutral/Undecided","value":3,"count":453},{"name":"Disagree Somewhat","value":4,"count":676},{"name":"Disagree Strongly","value":5,"count":301}]};
+
+      graphData = getGraphData( json ); 
+      //          [
+      //               {
+      //                  name: 'Yes',
+      //                  y: 89.7,
+      //                  sliced: true,
+      //                  selected: true
+      //              },
+      //              ['No',    10.3]
+      //          ];
+
     	
     	// Radialize the colors
 		  Highcharts.getOptions().colors = Highcharts.map(Highcharts.getOptions().colors, function(color) {
@@ -23,7 +60,7 @@ $(function () {
                 plotShadow: false
             },
             title: {
-                text: 'Browser market shares at a specific website, 2010'
+                text: graphTitle
             },
             tooltip: {
         	    pointFormat: '{series.name}: <b>{point.percentage}%</b>',
@@ -45,20 +82,8 @@ $(function () {
             },
             series: [{
                 type: 'pie',
-                name: 'Browser share',
-                data: [
-                    ['Firefox',   45.0],
-                    ['IE',       26.8],
-                    {
-                        name: 'Chrome',
-                        y: 12.8,
-                        sliced: true,
-                        selected: true
-                    },
-                    ['Safari',    8.5],
-                    ['Opera',     6.2],
-                    ['Others',   0.7]
-                ]
+                name: 'Poll Results',
+                data: graphData
             }]
         });  // new Highcharts.Chart
     });  // $(document).ready
@@ -72,7 +97,7 @@ $(function () {
 
 <hr/>
 Todo: summarize this data rather than present it raw, obviously.
-<div id="container" style="min-width: 400px; height: 400 px; margin:0 auto"></div>
+<div id="container" style="min-width: 400px; height: 400px; margin:0 auto"></div>
 <hr/>
 
 <p>
