--- a/app/views/quick_poll_responses/index.html.erb
+++ b/app/views/quick_poll_responses/index.html.erb
@@ -21,25 +21,7 @@ $(function () {
       return data;
     }
 
-
-    var chart;
-    $(document).ready(function() {
-
-      graphTitle = "<%= @quick_poll.title %>";
-      json = {"poll":{"body":"Should $3.7 gazillion dollars be spent on a bridge to Canada?","created_at":"2013-02-07T03:35:54Z","end_time":"2013-01-01T05:00:00Z","id":1,"issue_id":1,"poll_workflow_state_id":2,"quick_poll_type_id":1,"start_time":"2012-01-01T05:00:00Z","title":"Should the bridge to Canada be built?","updated_at":"2013-02-07T03:35:54Z"},"results":[{"name":"Agree Strongly","value":1,"count":231},{"name":"Agree Somewhat","value":2,"count":342},{"name":"Neutral/Undecided","value":3,"count":453},{"name":"Disagree Somewhat","value":4,"count":676},{"name":"Disagree Strongly","value":5,"count":301}]};
-
-      graphData = getGraphData( json ); 
-      //          [
-      //               {
-      //                  name: 'Yes',
-      //                  y: 89.7,
-      //                  sliced: true,
-      //                  selected: true
-      //              },
-      //              ['No',    10.3]
-      //          ];
-
-    	
+    function renderChart(graphTitle, graphData) {
     	// Radialize the colors
 		  Highcharts.getOptions().colors = Highcharts.map(Highcharts.getOptions().colors, function(color) {
 		    return {
@@ -86,6 +68,30 @@ $(function () {
                 data: graphData
             }]
         });  // new Highcharts.Chart
+    } // renderChart
+
+    var chart;
+    var graphData=[];
+    $(document).ready(function() {
+
+      graphTitle = "<%= @quick_poll.title %>";
+      //json = {"poll":{"body":"Should $3.7 gazillion dollars be spent on a bridge to Canada?","created_at":"2013-02-07T03:35:54Z","end_time":"2013-01-01T05:00:00Z","id":1,"issue_id":1,"poll_workflow_state_id":2,"quick_poll_type_id":1,"start_time":"2012-01-01T05:00:00Z","title":"Should the bridge to Canada be built?","updated_at":"2013-02-07T03:35:54Z"},"results":[{"name":"Agree Strongly","value":1,"count":231},{"name":"Agree Somewhat","value":2,"count":342},{"name":"Neutral/Undecided","value":3,"count":453},{"name":"Disagree Somewhat","value":4,"count":676},{"name":"Disagree Strongly","value":5,"count":301}]};
+      // graphData         [
+      //               {
+      //                  name: 'Yes',
+      //                  y: 89.7,
+      //                  sliced: true,
+      //                  selected: true
+      //              },
+      //              ['No',    10.3]
+      //          ];
+
+
+     $.get( "/quick_poll_results/<%= @quick_poll.id %>.json", function (json, status) {
+          graphData = getGraphData( json ); 
+          renderChart( graphTitle, graphData );
+     } );
+    	
     });  // $(document).ready
     
 }); // $(function () {
