--- a/app/views/home/admin.html.erb
+++ b/app/views/home/admin.html.erb
@@ -3,7 +3,7 @@
 <p>
 <p>
 <%= link_to 'Users', users_path %><br>
-<%= link_to 'Polities, Offices & Officials', admin_states_path %><br>
+<%= link_to 'Polities, Offices & Officials', admin_state_path(1) %><br>
 <%= link_to 'Congressional Districts', congressional_districts_path %><br>
 <%= link_to 'Counties',counties_path %><br>
 <%= link_to 'Municipalities',municipalities_path %><br>
