--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -22,12 +22,12 @@
 <% if @governor_office %>
 <% governor = incumbent_officials(@governor_office.id) %>
 <tr>
-	<td><%= @governor_office %></td>
+	<td>Governor</td>
 	<td><%= link_to governor.name, governor if !@governor.nil? %></td>
 	<td>
 		<% if !@governor.nil? %>
 		  <% if governor.has_photo? %>
-		    <%= image_tag governor.photo_path %>
+		    <%= image_tag governor.photo_path, :height => 125, :width => 100 %>
 		  <% else %>
 		    No photo.
 	      <% end %>
@@ -40,12 +40,12 @@
   <% @us_senate_offices.each do |office| %>
   <% senator = incumbent_officials(office.id).first %>
   <tr>
-	<td><%= office %></td>
+	<td><%= office.office_type.name %></td>
 	<td><%= link_to senator.name, senator if !senator.nil? %></td>
 	<td>
 	  <% if !senator.nil? %>
 	    <% if senator.has_photo? %>
-	      <%= image_tag senator.photo_path %>
+	      <%= image_tag senator.photo_path, :height => 125, :width => 100 %>
 	    <% else %>
 	      No photo.
 	    <% end %>
@@ -59,12 +59,12 @@
   <% @us_house_offices.each do |office| %>
   <% congressperson = incumbent_officials(office.id).first %>
   <tr>
-  	<td><%= office %></td>
+  	<td><%= office.office_type.name %></td>
 	<td><%= link_to congressperson.name, congressperson if !congressperson.nil? %></td>
 	<td>
 	  <% if !congressperson.nil? %>
 	    <% if congressperson.has_photo? %>
-	      <%= image_tag congressperson.photo_path %>
+	      <%= image_tag congressperson.photo_path, :height => 125, :width => 100 %>
 	    <% else %>
 	      No photo.
 	    <% end %>
