quicky implementation of unregistered polling. Also, poll result percentages now computed in ruby so js won't have to do it

--- a/app/views/quick_poll_responses/_form.html.erb
+++ b/app/views/quick_poll_responses/_form.html.erb
@@ -20,8 +20,8 @@
   <table>
   <% @quick_poll.quick_poll_options.each do |option| %>
     <tr>
-    <td><%= radio_button_tag :value, option.value %></td>
-    <td><%= label_tag :value, option.text %></td>
+    <td><%= f.radio_button :value, option.value %></td>
+    <td><%= f.label :value, option.text %></td>
     </tr>
   <% end %>
   </table>  
