--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,21 @@
 Welcome to Asq.us, the town hall for the 21st century. You may log in or sign up with the links above or <a href="auth/facebook">connect with facebook</a>.
+
+
+
+<h4>Open Polls</h4>
+
+<table width=400>
+<% @open_quick_polls.each do |poll| %>
+<% path = new_quick_poll_response_path + "?quick_poll_id=" + poll.id.to_s %>
+<tr><td><a href=<%=path%> ><%= poll.title %></td></tr>
+<% end %>
+</table>
+
+<h4>Answered Polls</h4>
+
+<table width=400>
+<% @answered_quick_polls.each do |poll| %>
+<% path = quick_poll_responses_path + "?quick_poll_id=" + poll.id.to_s %>
+<tr><td><a href=<%=path%> ><%= poll.title %></td></tr>
+<% end %>
+</table>
