--- a/app/views/admin/counties/show.html.erb
+++ b/app/views/admin/counties/show.html.erb
@@ -11,5 +11,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_county_path(@county) %> |
-<%= link_to 'Back', counties_path %>
+<%= link_to 'Edit', edit_admin_county_path(@county) %> |
+<%= link_to 'Back', admin_counties_path %>
