--- a/app/views/admin/officials/show.html.erb
+++ b/app/views/admin/officials/show.html.erb
@@ -6,9 +6,106 @@
 </p>
 
 <p>
-  <b>Email:</b>
-  <%= @official.email %>
+	<b>Office:</b>
+	<%= @official.congress_office %>
 </p>
+
+<p>
+	<b>Phone:</b>
+	<%= @official.phone %>
+</p>
+
+<p>
+	<b>Fax:</b>
+	<%= @official.fax %>
+</p>
+
+<% if @official.website %>
+<p>
+	<b>Web site:</b>
+	<a href = '<%= @official.website %>', target = 'blah'><%= @official.website %></a>
+</p>
+<% end %>
+
+<% if @official.webform %>
+<p>
+	<b>Web contact form:</b>
+	<a href = '<%= @official.webform %>', target = 'blah'><%= @official.webform %></a>
+	
+</p>
+<% end %>
+
+<% if @official.twitter_id %>
+<p>
+	<b>Twitter:</b>
+    <a href = 'http://twitter.com/<%= @official.twitter_id %>', target = 'blah'>@<%= @official.twitter_id %></a>
+</p>
+<% end %>
+
+<% if @official.facebook_id %>
+<p>
+	<b>Facebook:</b>
+    <a href = 'http://facebook.com/<%= @official.facebook_id %>', target = 'blah'><%= @official.facebook_id %></a>
+</p>
+<% end %>
+
+<% if @official.congresspedia_url %>
+<p>
+	<b>Open Congress:</b>
+	<a href = '<%= @official.congresspedia_url %>', target = 'blah'><%= @official.congresspedia_url %></a>
+</p>
+<% end %>
+
+
+<% if @official.youtube_url %>
+<p>
+	<b>Youtube:</b>
+	<a href = '<%= @official.youtube_url %>', target = 'blah'><%= @official.youtube_url %></a>
+</p>
+<% end %>
+
+<% if @official.fax %>
+<p>
+	<b>Fax:</b>
+	<%= @official.fax %></a>
+</p>
+
+<% end %>
+
+<% if @official.votesmart_id %>
+<p>
+	<b>Votesmart id:</b>
+	<%= @official.votesmart_id %></a>
+</p>
+<% end %>
+
+<% if @official.govtrack_id %>
+<p>
+	<b>Govtrack id:</b>
+	<%= @official.govtrack_id %></a>
+</p>
+<% end %>
+
+<% if @official.bioguide_id %>
+<p>
+	<b>Bioguide:</b>
+	<%= @official.bioguide_id %></a>
+</p>
+<% end %>
+
+<% if @official.eventful_id %>
+<p>
+	<b>Eventful:</b>
+	<%= @official.eventful_id %></a>
+</p>
+<% end %>
+
+<% if @official.rss %>
+<p>
+	<b>RSS:</b>
+	<<%= @official.rss %></a>
+</p>
+<% end %>
 
 <p>
 	<b>Photo:</b>
