--- a/app/views/quick_poll_responses/_form.html.erb
+++ b/app/views/quick_poll_responses/_form.html.erb
@@ -8,7 +8,7 @@
 
   <p>
   <% if @quick_poll.issue.poller_type == 'Office' %>
-    <% official = incumbent_officials(@quick_poll.issue.poller_id).first %>
+    <% official = Office::incumbent_officials(@quick_poll.issue.poller_id).first %>
     <% unless official.nil? %>
       (Asqed by <%= link_to official.name, official %>)
     <% end %>
