moved some things around

--- a/app/views/admin/counties/_form.html.erb
+++ b/app/views/admin/counties/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@county) do |f| %>
+<%= simple_form_for([:admin,@county]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
