--- a/app/views/admin/states/show.html.erb
+++ b/app/views/admin/states/show.html.erb
@@ -56,7 +56,7 @@
 <p>
 <ul>
 <li><%= link_to "Municipalities", municipalities_path( :state_id => @state.id ) %></li>
-<li><%= link_to "Counties", counties_path( :state_id => @state.id ) %></li>
+<li><%= link_to "Counties", admin_counties_path( :state_id => @state.id ) %></li>
 </ul>
 
 
