--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -3,9 +3,9 @@
 <% if !user_office.nil? %>
 <b>Administration: <%= user_office.full_name %></b>
 <ul>
-<% new_i_path = new_issue_path + "?poller_type=Office&poller_id=" + user_office.id.to_s %>
+<% new_i_path = new_staff_issue_path + "?poller_type=Office&poller_id=" + user_office.id.to_s %>
 <li><a href="<%=new_i_path %>">New Issue</a>
-<% new_qp_path = new_quick_poll_path + "?poller_type=Office&poller_id=" + user_office.id.to_s %>
+<% new_qp_path = new_staff_quick_poll_path + "?poller_type=Office&poller_id=" + user_office.id.to_s %>
 <li><a href="<%=new_qp_path %>">New Quick Poll</a>
 </ul>
 
