--- a/app/views/admin/counties/index.html.erb
+++ b/app/views/admin/counties/index.html.erb
@@ -15,11 +15,11 @@
     <td><%= county.state.name %></td>
     <td><%= link_to 'Show', admin_county_path(county) %></td>
     <td><%= link_to 'Edit', edit_admin_county_path(county) %></td>
-    <td><%= link_to 'Destroy', county, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', admin_county_path(county), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New County', admin_new_county_path %>
+<%= link_to 'New County', new_admin_county_path %>
