--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
     <li>
     <%= link_to current_user.email, edit_user_registration_path %>
     </li>
-    <% if current_user.site_role_id == 'admin' %>
+    <% if current_user.site_role_id == 'ADMIN' %>
       <li>
       <%= link_to 'Admin', '/admin' %>
       </li>
