--- a/app/views/quick_poll_responses/_form.html.erb
+++ b/app/views/quick_poll_responses/_form.html.erb
@@ -11,7 +11,7 @@
   <div class="form-actions">
   <div class="btn-group btn-group-vertical">
     <% @quick_poll.quick_poll_options.each do |option| %>
-      <input type=submit class="btn btn-small" value='<%= option.text %>' name = <%= option.value %> style="width: 100px;" >
+      <input type=submit class="btn btn-info" value='<%= option.text %>' name = <%= option.value %> style="width: <%= @quick_poll_options_width_px %>px;">
     <% end %>
  </div>
  </div>
