--- a/app/views/staff/issues/show.html.erb
+++ b/app/views/staff/issues/show.html.erb
@@ -17,4 +17,4 @@
 
 
 <%= link_to 'Edit', edit_staff_issue_path(@issue) %> |
-<%= link_to 'Back', staff_issues_path %>
+<%= link_to 'Back', staff_path %>
