--- a/app/views/staff/home/index.html.erb
+++ b/app/views/staff/home/index.html.erb
@@ -1,1 +1,37 @@
-Staff Administration
+<b>Staff Administration for <%= @incumbent.official_name_with_abbreviated_title %></b>
+<p>
+<h4>Issues:</h4>
+<table>
+	<% @issues.each do |issue| %>
+	<tr><td><%= link_to issue.title, staff_issue_path(issue.id) %></td></tr>
+	<% end %>
+</table>
+<p>
+<b><%= link_to 'New Issue', new_staff_issue_path(:poller_type => :Office, :poller_id => @incumbent.office_id.to_s) %></b>
+
+<p>
+
+<table width=600>
+  <tr>
+    <th>Title</th>
+	<th>Start time</th>
+	<th>End time</th>
+	<th>Poll workflow state</th>
+	<th></th>
+	<th></th>
+	<th></th>
+  </tr>
+
+  <% @quick_polls.each do |quick_poll| %>
+    <tr>
+	  <td><%= quick_poll.title %></td>
+	  <td><%= quick_poll.start_time %></td>
+	  <td><%= quick_poll.end_time %></td>
+	  <td><%= quick_poll.poll_workflow_state %></td>
+	  <td><%= link_to 'Show', staff_quick_poll_path(quick_poll) %></td>
+	  <td><%= link_to 'Edit', edit_staff_quick_poll_path(quick_poll) %></td>
+	  <td><%= link_to 'Destroy', staff_quick_poll_path(quick_poll), method: :delete, data: { confirm: 'Are you sure?' } %> </td>	
+	</tr>
+  <% end %>
+</table>
+<b><%= link_to 'New Quick Poll', new_staff_quick_poll_path(:poller_type => :Office, :poller_id => @incumbent.office_id.to_s) %></b>
