--- a/app/views/staff/quick_polls/show.html.erb
+++ b/app/views/staff/quick_polls/show.html.erb
@@ -32,4 +32,4 @@
 
 
 <%= link_to 'Edit', edit_staff_quick_poll_path(@quick_poll) %> |
-<%= link_to 'Back', "/" %>
+<%= link_to 'Back', staff_path %>
