--- a/app/views/admin/states/show.html.erb
+++ b/app/views/admin/states/show.html.erb
@@ -17,7 +17,7 @@
   </tr>
 
 <% @us_senator_offices.each do |office| %>
-  <% incumbent = Office.incumbent_officials(office.id).first %>
+  <% incumbent = Office.incumbent_official(office.id) %>
   <tr>
     <td><%= office.office_type.name %></td>
     <td><%= if !incumbent.nil?
@@ -36,7 +36,7 @@
     <th>Office</th><th>Incumbent</th>
   </tr>
 <% @us_rep_offices.each do |office| %>
-  <% incumbent = Office.incumbent_officials(office.id).first %>
+  <% incumbent = Office.incumbent_official(office.id) %>
   <tr>
 	<% if office.congressional_district_no > 0 %>
 	  <td><%= office.office_type.name + ", District " + office.congressional_district_no.to_s %></td>
@@ -60,7 +60,7 @@
     <th>Office</th><th>Incumbent</th>
   </tr>
 <% @state_senator_offices.each do |office| %>
-  <% incumbent = Office.incumbent_officials(office.id).first %>
+  <% incumbent = Office.incumbent_official(office.id) %>
   <tr>
     <td><%= office.office_type.name + ", District " + office.state_senate_district_key %></td>
     <td><%= if incumbent
@@ -80,7 +80,7 @@
     <th>Office</th><th>Incumbent</th>
   </tr>
 <% @state_rep_offices.each do |office| %>
-  <% incumbent = Office.incumbent_officials(office.id).first %>
+  <% incumbent = Office.incumbent_official(office.id) %>
   <tr>
 	<td><%= office.office_type.name + ", District " + office.state_house_district_key %></td>
     <td><%= if incumbent
