--- a/app/views/quick_poll_responses/_form.html.erb
+++ b/app/views/quick_poll_responses/_form.html.erb
@@ -4,7 +4,7 @@
 
   <h3>Asq.us Poll: <%= @quick_poll.title %></h3> 
 
-  <%= @quick_poll.body %>
+  <%= image_tag 'asqus-16px-height.png' %> <%= @quick_poll.body %>
 
   <p>
 
