Revamped the css to use asq.us site.css.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,6 +1,8 @@
 
 <%# todo: fix up this horribly inefficient code %>
 
+<div class="container">
+
 <table width=400>
 <tr><th>Office</th><th>Incumbent</th><th></th></tr>
 
@@ -118,3 +120,5 @@
 <tr><td><a href=<%=path%> ><%= poll.title %></td></tr>
 <% end %>
 </table>
+
+</div>
