--- a/app/views/quick_poll_responses/index.html.erb
+++ b/app/views/quick_poll_responses/index.html.erb
@@ -66,7 +66,7 @@ window.console = window.console || (function(){
 		  // Build the chart
       chart = new Highcharts.Chart({
             chart: {
-                renderTo: 'container',
+                renderTo: 'graph',
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
                 plotShadow: false
@@ -126,7 +126,7 @@ window.console = window.console || (function(){
 		  // Build the chart
       chart = new Highcharts.Chart({
             chart: {
-                renderTo: 'container',
+                renderTo: 'graph',
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
                 plotShadow: false,
@@ -192,13 +192,15 @@ window.console = window.console || (function(){
 
 </script>
 
-<h5>Issue: <%= @quick_poll.issue.title %></h5>
+<div class="container">
 
-<p><%= @quick_poll.issue.comment %> <%= image_tag 'asqus-16px-height.png' %></p>
+<h5><%= image_tag 'asqus-16px-height.png' %>&nbsp;Issue: <%= @quick_poll.issue.title %></h5>
+
+<p><%= @quick_poll.issue.comment %> </p>
 
 <hr/>
 
-<div id="container" style="min-width: 400px; height: 400px; margin:0 auto"></div>
+<div id="graph" style="height: 400px; margin:0 auto"></div>
 <hr/>
 <div class="row">
 <div id="pollBody" class="span8">
@@ -234,3 +236,6 @@ Asqed by <%= link_to @jot.official_name_with_abbreviated_title, official_url(@jo
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
+</div> <!-- class="container" -->
+
+</html>
