--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -96,7 +96,7 @@
 
 body {
   font-family: Trebuchet MS;
-  padding-top: 48px;
+  /* padding-top: 48px; */
                                                                                                                            /* Background Gradient 
     background: -moz-linear-gradient(top,  rgba(192,232,246,0) 0%, rgba(192,232,246,1) 100%); /* FF3.6+ 
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(192,232,246,0)), color-stop(100%,rgba(192,232,246,1))); /* Chrome,Safari4+
