--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<a href="<%= url_for(root_path) %>" class='brand'><%= image_tag('asqus-16px-height.png') %>&nbsp;Asq.us</a>
+<a href="<%= url_for(root_path) %>" class='brand'><%= image_tag('asqus-logo.png') %></a>
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
