--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,15 @@
-<a href="<%= url_for(root_path) %>" class='brand'><%= image_tag('asqus-logo.png') %></a>
-<ul class="nav">
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </a>
+    <a href="<%= url_for(root_path) %>" class='brand'><%= image_tag('asqus-logo.png') %></a>
+
+      <div class="nav-collapse">
+        <ul class="nav">
   <% if user_signed_in? %>
     <li>
     <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
@@ -35,4 +45,8 @@
     </li>
   <%end %>
 
-</ul>
+        </ul>
+      </div> <!-- nav-collapse -->
+    </div> <!-- container -->
+  </div><!-- navbar-inner -->
+</div><!-- navbar -->
