Mobile Menu Tweak.

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -319,6 +319,12 @@ li {
   background-repeat: no-repeat;
   filter: none; }
 
+.btn-navbar {
+  background: none;
+  background-image: none;
+  background-color: #012345;
+}
+
 #headerIntro {
   height: 520px;
   /* background-image: url('../img/clouds-background.png'); */
